# Site-and-Pattern

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  DEMO_VIDEO_SCRIPT.md  FEATURE_BRAINSTORM.md  FRIEND_SETUP_GUIDE.md  INSTALL.md  INSTALL_INSTRUCTIONS.md  LICENSE  MAC_SETUP_GUIDE.md  PermaDesign V1 Final README.md  PermaDesign.iss  PermaDesign.spec  QUICK_START.md  README.md  ROADMAP.md  SESSION_HANDOFF.md  TROUBLESHOOTING.md  USER_GUIDE.md  V1_FINAL_AUDIT.md  build.bat  build.sh  build_installer.bat  build_installer.sh  installer.nsi  main.py  permadesign.spec  plant_data.docx  pyproject.toml  requirements-optional.txt  requirements.txt  review.md
.claude/: settings.json  settings.local.json
.claude/hooks/: branch_policy.py  philosophy_primer.sh
.claude/skills/: README.md
.github/workflows/: release-macos.yml  release-windows.yml
data/: bee_attributes_master.json  ecoregions_canada.geojson  fauna_master.json  garden_plants.json  hardiness_zones.json  lepidoptera_attributes_master.json  nurseries_master.json  plant_fauna_master.json  plants.json  plants_master.json  rainfall_fallback_alberta.json  rainfall_fallback_prairie.json  soil_fallback_alberta.json  soil_fallback_prairie.json  wind_fallback_alberta.json  wind_fallback_prairie.json
docs/: 3D_ASSETS.md  3D_SPRITES.md  AGENT_API.md  BUILD.md  DATABASE_SCHEMA.md  DESIGN_PHILOSOPHY.md  LEARNING_ROADMAP.md  PHILOSOPHY_ROADMAP.md  PROJECT_FILE_FORMAT.md  REFERENCES.md  ROADMAP.md  USER_GUIDE.md  data_gaps_v1.44.md
docs/archive/: FEATURE_BRAINSTORM.md
docs/learning/: PROGRESS.md  README.md  journal.md  phase-0-machinery.md  phase-1-python.md  phase-2-tests.md  phase-3-data.md  phase-4-architecture.md  phase-5-solo.md
examples/: agent_session.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  PermaDesign-callflow.html  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/converted/: plant_data_87aaa373.md
html/: map.html  model_probe.html  scene3d.html  sprite_gallery.html  sprite_gallery_scenes.json  view3d.html
html/map/: 01-core.js  02-boundary.js  03-plants.js  04-tools.js  05-features.js  06-overlays.js
html/scene3d/: 01-core.js  (+8 more)
scripts/: apply_safety_tags.py  apply_sourcing_data.py  check_community_coverage.py  check_plant_data.py  expand_fauna.py  expand_fauna_sk.py  expand_prairie_flora.py  export_plant_docx.py  fetch_inaturalist_images.py  learning_progress.py  make_gallery_scene.py  prepare_ecoregions.py  render_flower_sprites.py  tag_prairie_provenance.py
src/: __main__.py  analysis_panel.py  app.py  app_version.py  area_fill.py  bee_habitat.py  bootstrap.py  branding.py  building_downloader.py  building_flow.py  building_store.py  chickadee_scenario.py  cli.py  climate.py  collapsible_panel.py  conversion_plan.py  creature_community.py  data_quality.py  design_api.py  design_critic.py  design_goals.py  design_review_flow.py  docent.py  docent_widget.py  ecological_role.py  ecoregion.py  elevation.py  errors.py  exclusion.py  field_notes.py  field_study.py  field_study_widget.py  fill_tab_widget.py  filter_widgets.py  footprint_extract.py  footprint_ndsm.py  forage_calendar.py  forage_calendar_widget.py  generate_design_dialog.py  generate_worker.py  (+102 more)
tests/: test_aesthetics.py  test_agent_generation_loop.py  test_agent_session_example.py  test_app_smoke.py  test_architecture_guard.py  test_area_fill.py  test_bee_habitat.py  test_bridge_contract.py  test_building_downloader.py  test_building_flow.py  test_building_store.py  test_canopy_footprint.py  test_chickadee_scenario.py  test_cli.py  test_climate.py  test_climate_cache.py  test_community_drag.py  test_community_library_index.py  test_companions.py  test_controller_shims.py  test_conversion_plan.py  test_creature_community.py  test_data_quality.py  test_design_critic.py  test_design_goals.py  test_design_placement.py  test_docent.py  test_ecological_role.py  test_ecoregion.py  test_exclusion.py  test_existing_features.py  test_fauna.py  test_fetch_inaturalist_images.py  test_field_notes.py  test_field_study.py  test_fill_tab_widget.py  test_footprint_extract.py  test_footprint_ndsm.py  test_forage_calendar.py  test_generate_dialog.py  (+98 more)
web3d/: README.md  map3d-sun-shadows.patch
(+116 files in other folders)
